# SPL-Compiler

./: README.md
eco32tools/: test.s  test.spl  test.x
skeleton/: README(Submit).txt
skeleton/.submitscript/data/: config.json
skeleton/.submitscript/data/assignments/Aufgabe-1/submissions/[evaluated] 2fde1406-cfe7-462b-ad2d-7ec86a1d7ab2/: submission.json  submission_response.json  upload.tgz  variant.json
skeleton/.submitscript/data/assignments/Aufgabe-1/submissions/[evaluated] 6b6b7cb9-3c8d-4366-92bc-e55f1bef3b62/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-1/submissions/[evaluated] edf0f0d2-7b24-4a87-a1b0-bf123f3097ad/: submission.json  submission_response.json  team.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-1/submissions/[evaluated] f59b20c1-c4db-44dd-9a8e-5b07642eb73a/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] 1c965fd3-9356-44f0-9207-6984fc41e97b/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] 38627b60-3de2-45d9-b2f2-07018050e18d/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] 5987ff14-acd3-4867-b9c9-fdb03a181006/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] a7a28fd0-95d7-47ac-afa5-9f92b0827b37/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] a825d649-8941-48b6-90b7-b8c320fe1728/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] d922fc11-b621-4cab-862d-848a3f0bc217/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] dcd3203c-1dc3-4600-89c0-db6da2c6ca9a/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] fcef7e87-360d-4cb6-af0b-b0a65f25730a/: submission.json  submission_response.json  upload.tgz
skeleton/c/: .gitignore  CMakeLists.txt  README(C).txt
skeleton/c/src/: command_line_options.c  main.c
skeleton/c/src/absyn/: _declarations.h  absyn.c  absyn.h  expressions.h  global_declarations.c  global_declarations.h  lists.c  lists.h  parameter_declaration.c  parameter_declaration.h  position.c  position.h  program.c  program.h  statements.c  statements.h  type_expressions.c  type_expressions.h  variable_declaration.c  variable_declaration.h  variables.c  variables.h
skeleton/c/src/absyn/printing/: printing_helpers.c  printing_helpers.h
skeleton/c/src/phases/_01_scanner/: scanner.flex
skeleton/c/src/phases/_02_03_parser/: parser.y
skeleton/c/src/phases/_04a_tablebuild/: tablebuild.c  tablebuild.h
skeleton/c/src/phases/_04b_semant/: procedurebodycheck.c  procedurebodycheck.h
skeleton/c/src/phases/_05_varalloc/: stack_layout.c  stack_layout.h  varalloc.c  varalloc.h
skeleton/c/src/phases/_06_codegen/: codegen.c  codegen.h  codeprint.h
skeleton/c/src/table/: entry.c  entry.h  identifier.c  identifier.h  table.c  table.h
skeleton/c/src/types/: types.c  types.h
skeleton/c/src/util/: ascii_table.c  ascii_table.h  errors.c  errors.h  list.h  memory.c  memory.h  string_ops.c  string_ops.h
skeleton/c/tests/: PA1.spl  PA1aufgabe2.spl
skeleton/c/tests/runtime_tests/: codegen.spl
